# daily-reading

./: Pipfile  README.md  crawling.py  github_utils.py  main.py  pyproject.toml  test.py
.github/workflows/: python-cron.yml
